[package]
name = "rust-ovr-demo"
version = "0.1.0"
authors = ["tom"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.70"
ovr-mobile-sys = { path = "../ovr-mobile-sys" }
#ovr-mobile-sys = "0.4.0"
jni = "0.19.0"
servo-egl = "0.2.1"
gles3 = { path = "../gles3" }
gl = "0.14.0"
nix = "0.17.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.1"
byteorder = "1"
png = "0.16.3"
math = { path = "../math" }
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
#ndk = { path = "../libs/android-ndk-rs/ndk" }
#ndk-glue = { path = "../libs/android-ndk-rs/ndk-glue" }
ndk = "0.3.0"
ndk-glue = "0.3.0"
ndk-sys = "0.2.1"

#[target.'cfg(os = "android")'.dependencies.ffi]
#package = "ndk-sys"
#path = "../libs/android-ndk-rs/ndk-sys"

#[dependencies.ffi]
#package = "ndk-sys"
#path = "../libs/android-ndk-rs/ndk-sys"

[lib]
crate-type = ["lib", "cdylib"]

# docs: https://github.com/rust-windowing/android-rs-glue#supported-packagemetadataandroid-entries
[package.metadata.android]
build_targets = ["aarch64-linux-android"]
package_name = "rust-ovr-demo"
package_label = "demo"
apk_name = "Appname"
label = "Appname"

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 29

assets = "assets"
permission = [
			{ name = "android.permission.ACCESS_NETWORK_STATE"  },
			{ name = "android.permission.INTERNET" },
			{ name = "android.permission.MODIFY_AUDIO_SETTINGS" }]
# permission = [["android.permission.INTERNET"], ["android.permission.MODIFY_AUDIO_SETTINGS"], ["android.permission.ACCESS_NETWORK_STATE"]]

# headtracking false means it works in either 3dof or 6dof mode
features = [["android.hardware.vr.headtracking", "false"]]

# vr_only or dual
#application_metadatas = [["com.samsung.android.vr.application.mode", "vr_only"]]

# vr_only or dual
[[package.metadata.android.application.meta_data]]
name = "com.samsung.android.vr.application.mode"
value = "vr_only"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"